--- a/arch/arm64/configs/qcom_debug.config
+++ b/arch/arm64/configs/qcom_debug.config
@@ -16,11 +16,19 @@ CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
 CONFIG_DETECT_HUNG_TASK=y
 CONFIG_DMABUF_SYSFS_STATS=y
 CONFIG_DYNAMIC_DEBUG=y
+# CONFIG_EFI_VARS_PSTORE is not set
+# CONFIG_EFI_VARS_PSTORE_DEFAULT_DISABLE is not set
 # CONFIG_FW_LOADER_DEBUG is not set
 CONFIG_HARDLOCKUP_DETECTOR=y
 CONFIG_LOCALVERSION="-debug"
 CONFIG_MAC80211_DEBUGFS=y
 CONFIG_PAGE_POISONING=y
 CONFIG_PID_IN_CONTEXTIDR=y
+CONFIG_PSTORE=y
+# CONFIG_PSTORE_BLK is not set
+# CONFIG_PSTORE_COMPRESS is not set
+CONFIG_PSTORE_CONSOLE=y
+CONFIG_PSTORE_DEFAULT_KMSG_BYTES=10240
+CONFIG_PSTORE_PMSG=y
+CONFIG_REED_SOLOMON=y
 CONFIG_SOFTLOCKUP_DETECTOR=y
-# CONFIG_TEST_DYNAMIC_DEBUG is not set
