--- a/arch/arm64/boot/dts/qcom/qcs6490-addons-rb3gen2-hsp.dts
+++ b/arch/arm64/boot/dts/qcom/qcs6490-addons-rb3gen2-hsp.dts
@@ -2,7 +2,7 @@
 /*
  * qcs6490-addons RB3gen2 device tree source
  *
- * Copyright (c) 2024 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2024-2025 Qualcomm Innovation Center, Inc. All rights reserved.
  *
  */
 
@@ -23,6 +23,18 @@
 	pinctrl-0 = <&pcie0_reset_n>, <&pcie0_wake_n>, <&pcie0_clkreq_n>;
 	pinctrl-names = "default";
 	status = "okay";
+
+	pcie0_port0: pcie@0 {
+		reg = <0x0 0x0 0x0 0x0 0x0>;
+		#address-cells = <3>;
+		#size-cells = <2>;
+		ranges;
+
+		bus-range = <0x01 0xff>;
+		device_type = "pci";
+
+		wake-gpios = <&tlmm 89 GPIO_ACTIVE_LOW>;
+	};
 };
 
 &pcie0_phy {
